--- a/asset-event-producer/pom.xml
+++ b/asset-event-producer/pom.xml
@@ -3,12 +3,38 @@
   <groupId>asset-event-producer</groupId>
   <artifactId>asset-event-producer</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <kafka.version>1.1.0</kafka.version>
+        <slf4j.version>1.7.7</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
+    </properties>
   <dependencies>
     <dependency>
 	  <groupId>org.springframework.kafka</groupId>
 	  <artifactId>spring-kafka</artifactId>
 	  <version>2.1.6.RELEASE</version>
 	</dependency>
+	    <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>${kafka.version}</version>
+        </dependency>
+           <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka-clients</artifactId>
+        <version>${kafka.version}</version>
+    </dependency>
+	  <dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-log4j12</artifactId>
+           <version>${slf4j.version}</version>
+         </dependency>
+        <dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-api</artifactId>
+           <version>${slf4j.version}</version>
+         </dependency>
   </dependencies>
 
   <build>
