Work on asset mrg testing and skaffold build

--- a/asset-mgr-ms/src/main/resources/cassandra.properties
+++ b/asset-mgr-ms/src/main/resources/cassandra.properties
@@ -1,3 +1,3 @@
-spring.data.cassandra.keyspace-name=assetmonitoring
-spring.data.cassandra.contact-points=
-spring.data.cassandra.port=9042
+cassandra.keyspace=assetmonitoring
+cassandra.contactpoints=localhost,10.1.0.30
+cassandra.port=9042
