--- a/asset-mgr-ms/chart/cassandra-statefulset.yaml
+++ b/asset-mgr-ms/chart/cassandra-statefulset.yaml
@@ -26,7 +26,7 @@ spec:
               name: cql
           env:
             - name: CASSANDRA_SEEDS
-              value: cassandra-0.cassandra.greencompute.svc.cluster.local
+              value: cassandra-0.cassandra.default.svc.cluster.local
             - name: MAX_HEAP_SIZE
               value: 256M
             - name: HEAP_NEWSIZE
