--- a/asset-mgr-ms/pom.xml
+++ b/asset-mgr-ms/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.8.9</version>
+		</dependency>
 	    <dependency>
 	        <groupId>org.springframework.data</groupId>
 	        <artifactId>spring-data-cassandra</artifactId>
