--- a/asset-mgr-ms/pom.xml
+++ b/asset-mgr-ms/pom.xml
@@ -3,6 +3,9 @@
   <groupId>asset-mgr-ms</groupId>
   <artifactId>asset-mgr-ms</artifactId>
   <version>0.0.1</version>
+  <packaging>jar</packaging>
+  <name>asset-mgr-ms</name>
+  <description>Microservice to manage Asset life cycle.</description>
   <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -11,8 +14,12 @@
   <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-cassandra-reactive</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -23,20 +30,16 @@
 		    <artifactId>mockito-core</artifactId>
 		    <version>2.8.9</version>
 		</dependency>
-	    <dependency>
-	        <groupId>org.springframework.data</groupId>
-	        <artifactId>spring-data-cassandra</artifactId>
-	    </dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-cassandra</artifactId>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
 		</dependency>
+
   </dependencies>
    <properties>
         <java.version>1.8</java.version>
     </properties>
-    
-  <packaging>jar</packaging>
 <repositories>
     <repository>
         <id>spring-libs-release</id>
