--- a/asset-mgr-ms/pom.xml
+++ b/asset-mgr-ms/pom.xml
@@ -9,9 +9,13 @@
   <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <version>2.0.3.RELEASE</version>
     </parent>
   <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
@@ -28,7 +32,7 @@
         <dependency>
 		    <groupId>org.mockito</groupId>
 		    <artifactId>mockito-core</artifactId>
-		    <version>2.8.9</version>
+		    <version>2.15.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.projectreactor</groupId>
