--- a/asset-consumer/pom.xml
+++ b/asset-consumer/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>asset-analytics</groupId>
-  <artifactId>asset-event-producer</artifactId>
+  <artifactId>asset-consumer</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -10,8 +10,12 @@
         <log4j.version>1.2.17</log4j.version>
     </properties>
   <dependencies>
-
-	 <dependency>
+    <dependency>
+	  <groupId>org.springframework.kafka</groupId>
+	  <artifactId>spring-kafka</artifactId>
+	  <version>2.1.6.RELEASE</version>
+	</dependency>
+	    <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-streams</artifactId>
             <version>${kafka.version}</version>
@@ -21,15 +25,15 @@
         <artifactId>kafka-clients</artifactId>
         <version>${kafka.version}</version>
     </dependency>
-    <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-          <version>${slf4j.version}</version>
+	<dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-log4j12</artifactId>
+           <version>${slf4j.version}</version>
     </dependency>
     <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>${slf4j.version}</version>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-api</artifactId>
+           <version>${slf4j.version}</version>
     </dependency>
     <dependency>
     	<groupId>com.google.code.gson</groupId>
