--- a/asset-dashboard-bff/pom.xml
+++ b/asset-dashboard-bff/pom.xml
@@ -10,7 +10,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.3.RELEASE</version>
-    </parent>
+  </parent>
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <kafka.version>1.1.0</kafka.version>
+        <spring-kafka.version>2.1.4.RELEASE</spring-kafka.version>
+        <java.version>1.8</java.version>
+  </properties>
   <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -21,10 +27,27 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+		       <groupId>org.springframework.boot</groupId>
+		       <artifactId>spring-boot-starter-websocket</artifactId>
+	     </dependency>
+	     <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>${spring-kafka.version}</version>
+        </dependency>
+	     <dependency>
+    	     <groupId>com.google.code.gson</groupId>
+    	     <artifactId>gson</artifactId>
+    	     <version>2.8.2</version>
+	     </dependency>
+	     <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>${kafka.version}</version>
+        </dependency>
   </dependencies>
-   <properties>
-        <java.version>1.8</java.version>
-    </properties>
+
 
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
@@ -42,7 +65,7 @@
         <artifactId>exec-maven-plugin</artifactId>
 		  <executions>
 		    <execution>
-		        <id>app</id>
+		        <id>bff</id>
 		        <goals>
 		            <goal>java</goal>
 		        </goals>
