--- a/asset-consumer/pom.xml
+++ b/asset-consumer/pom.xml
@@ -2,28 +2,58 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>asset-analytics</groupId>
   <artifactId>asset-consumer</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
+  <description>A set of consumers for integrating with Kafka. One of them is a Springboot app 
+  to consume new asset event and event measurement and ingest them to a Cassandra data base.
+  Other are to test kafka deployment.
+  </description>
+  <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.3.RELEASE</version>
+  </parent>
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kafka.version>1.1.0</kafka.version>
+        <kafka.client.version>1.1.0</kafka.client.version>
+        <spring-kafka.version>2.1.7.RELEASE</spring-kafka.version>
         <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
     </properties>
   <dependencies>
-    <dependency>
-	  <groupId>org.springframework.kafka</groupId>
-	  <artifactId>spring-kafka</artifactId>
-	  <version>2.1.6.RELEASE</version>
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-web</artifactId>
+     </dependency>
+     <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-test</artifactId>
+         <scope>test</scope>
+     </dependency>
+     <dependency>
+	   <groupId>org.springframework.kafka</groupId>
+	   <artifactId>spring-kafka</artifactId>
+	   <version>${spring-kafka.version}</version>
+	 </dependency>
+	 <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka-test</artifactId>
+      <version>${spring-kafka.version}</version>
+      <scope>test</scope>
+    </dependency>
+     <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-cassandra</artifactId>
 	</dependency>
 	 <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-streams</artifactId>
-            <version>${kafka.version}</version>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka-streams</artifactId>
+         <version>${kafka.version}</version>
      </dependency>
+
      <dependency>
         <groupId>org.apache.kafka</groupId>
         <artifactId>kafka-clients</artifactId>
-        <version>${kafka.version}</version>
+        <version>${kafka.client.version}</version>
     </dependency>
 	<dependency>
            <groupId>org.slf4j</groupId>
@@ -36,15 +66,19 @@
            <version>${slf4j.version}</version>
     </dependency>
     <dependency>
-    	<groupId>com.google.code.gson</groupId>
+   		<groupId>com.google.code.gson</groupId>
     	<artifactId>gson</artifactId>
-    	<version>1.7.1</version>
+    	<version>2.8.2</version>
 	</dependency>
   </dependencies>
 
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
+       <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
