--- a/asset-consumer/pom.xml
+++ b/asset-consumer/pom.xml
@@ -32,8 +32,7 @@
      <dependency>
 	   <groupId>org.springframework.kafka</groupId>
 	   <artifactId>spring-kafka</artifactId>
-	   <version>${spring-kafka.version}</version>
-	 </dependency>
+	   </dependency>
 	 <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka-test</artifactId>
@@ -70,6 +69,22 @@
     	<artifactId>gson</artifactId>
     	<version>2.8.2</version>
 	</dependency>
+	<!--  The cassandra dependencies when you do not use Spring Data -->
+	<dependency>
+	  <groupId>com.datastax.cassandra</groupId>
+	  <artifactId>cassandra-driver-core</artifactId>
+	  <version>3.1.4</version>
+	</dependency>
+	<dependency>
+	  <groupId>com.datastax.cassandra</groupId>
+	  <artifactId>cassandra-driver-mapping</artifactId>
+	  <version>3.1.4</version>
+	</dependency>
+	<dependency>
+	  <groupId>com.datastax.cassandra</groupId>
+	  <artifactId>cassandra-driver-extras</artifactId>
+	  <version>3.1.4</version>
+	</dependency>
   </dependencies>
 
   <build>
@@ -87,6 +102,31 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+			 <groupId>org.codehaus.mojo</groupId>
+			 <artifactId>exec-maven-plugin</artifactId>
+			 <version>1.6.0</version>
+			 <executions>
+				 <execution>
+						 <id>AssetApp</id>
+						 <goals>
+							 <goal>java</goal>
+						 </goals>
+						 <configuration>
+								 <mainClass>ibm.cte.esp.KafkaInjectorApplication</mainClass>
+						 </configuration>
+				 </execution>
+				 <execution>
+						 <id>AssetInjector</id>
+						 <goals>
+							 <goal>java</goal>
+						 </goals>
+						 <configuration>
+								 <mainClass>ibm.cte.esp.AssetInjector</mainClass>
+						 </configuration>
+				 </execution>
+		 	</executions>
+		</plugin>
     </plugins>
   </build>
 </project>
