Pure asset injector in cassandra and kafka

--- a/asset-consumer/src/main/resources/application.yml
+++ b/asset-consumer/src/main/resources/application.yml
@@ -7,5 +7,6 @@ cassandra:
  basepackages: 
 kafka:
   bootstrap-servers: docker.for.mac.host.internal:30092
+  groupid: assetconsumers
   topic:
     test: test.topic
