--- a/asset-consumer/pom.xml
+++ b/asset-consumer/pom.xml
@@ -85,6 +85,11 @@
 	  <artifactId>cassandra-driver-extras</artifactId>
 	  <version>3.1.4</version>
 	</dependency>
+	   <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-yaml</artifactId>
+        <version>2.3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
