--- a/deployments/cassandra/cassandra-statefulset.yaml
+++ b/deployments/cassandra/cassandra-statefulset.yaml
@@ -1,11 +1,16 @@
 ---
-apiVersion: "apps/v1beta1"
+apiVersion: "apps/v1"
 kind: StatefulSet
 metadata:
   name: cassandra
+  labels:
+    app: cassandra
 spec:
   serviceName: cassandra
-  replicas: 1
+  replicas: 3
+  selector:
+    matchLabels:
+      app: cassandra
   template:
     metadata:
       labels:
@@ -47,7 +52,7 @@ spec:
         name: cassandra-data
         annotations:  # comment line if you want to use a StorageClass
           # or specify which StorageClass
-          volume.beta.kubernetes.io/storage-class: ""  
+          volume.beta.kubernetes.io/storage-class: ""
       spec:
         accessModes: ["ReadWriteOnce"]
         resources:
