--- a/asset-dashboard-ui/package.json
+++ b/asset-dashboard-ui/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
+    "queueing-subject": "^0.3.0",
     "rxjs": "^6.0.0",
+    "rxjs-websockets": "^6.0.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
