--- a/deployments/cassandra/cassandra-service.yaml
+++ b/deployments/cassandra/cassandra-service.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   labels:
     app: cassandra
-  name: cassandra
+  name: cassandra-svc
 spec:
   clusterIP: None
   ports:
