--- a/deployments/cassandra/cassandra-statefulset.yaml
+++ b/deployments/cassandra/cassandra-statefulset.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     app: cassandra
 spec:
-  serviceName: cassandra
-  replicas: 3
+  serviceName: cassandra-svc
+  replicas: 2
   selector:
     matchLabels:
       app: cassandra
@@ -31,7 +31,7 @@ spec:
               name: cql
           env:
             - name: CASSANDRA_SEEDS
-              value: cassandra-0.cassandra.default.svc.cluster.local
+              value: cassandra-0.cassandra.greencompute.svc.cluster.local
             - name: MAX_HEAP_SIZE
               value: 256M
             - name: HEAP_NEWSIZE
@@ -57,4 +57,4 @@ spec:
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
-            storage: 1Gi
+            storage: 2Gi
