--- a/deployments/cassandra/cassandra-statefulset.yaml
+++ b/deployments/cassandra/cassandra-statefulset.yaml
@@ -7,7 +7,7 @@ metadata:
     app: cassandra
 spec:
   serviceName: cassandra-svc
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: cassandra
@@ -16,6 +16,7 @@ spec:
       labels:
         app: cassandra
     spec:
+      terminationGracePeriodSeconds: 1800
       containers:
         - name: cassandra
           image: cassandra:3
@@ -29,32 +30,61 @@ spec:
               name: jmx
             - containerPort: 9042
               name: cql
+          resources:
+            limits:
+              cpu: "500m"
+              memory: 1Gi
+            requests:
+              cpu: "500m"
+              memory: 1Gi
+          lifecycle:
+            preStop:
+              exec:
+                command:
+                - /bin/sh
+                - -c
+                - nodetool drain
           env:
             - name: CASSANDRA_SEEDS
-              value: cassandra-0.cassandra.greencompute.svc.cluster.local
+              value: cassandra-0.cassandra-svc.greencompute.svc.cluster.local
             - name: MAX_HEAP_SIZE
-              value: 256M
+              value: 512M
             - name: HEAP_NEWSIZE
               value: 100M
             - name: CASSANDRA_CLUSTER_NAME
-              value: "Cassandra"
+              value: "GreenCassandra"
             - name: CASSANDRA_DC
               value: "DC1"
             - name: CASSANDRA_RACK
               value: "Rack1"
             - name: CASSANDRA_ENDPOINT_SNITCH
               value: GossipingPropertyFileSnitch
+          readinessProbe:
+            exec:
+              command:
+              - /bin/bash
+              - -c
+              - /ready-probe.sh
+            initialDelaySeconds: 15
+            timeoutSeconds: 5
           volumeMounts:
             - name: cassandra-data
               mountPath: /var/lib/cassandra/data
   volumeClaimTemplates:
     - metadata:
         name: cassandra-data
-        annotations:  # comment line if you want to use a StorageClass
-          # or specify which StorageClass
-          volume.beta.kubernetes.io/storage-class: ""
       spec:
         accessModes: ["ReadWriteOnce"]
+        storageClassName: fast
         resources:
           requests:
-            storage: 2Gi
+            storage: 1Gi
+
+---
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
+metadata:
+  name: fast
+provisioner: k8s.io/minikube-hostpath
+parameters:
+  type: pd-ssd
