Work on asset injector

--- a/asset-consumer/conf/config.properties
+++ b/asset-consumer/conf/config.properties
@@ -7,4 +7,5 @@ cassandra.strategy=SimpleStrategy
 cassandra.replicas=1
 kafka.bootstrap.server=docker.for.mac.host.internal:30092
 kafka.asset.topic.name=asset-topic
-kafka.groupid=assetinjector
+kafka.groupid=assetinjectors
+kafka.poll.duration=2000
