repackage asset mgr ms

--- a/asset-mgr-ms/pom.xml
+++ b/asset-mgr-ms/pom.xml
@@ -60,6 +60,23 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+			 <groupId>org.codehaus.mojo</groupId>
+			 <artifactId>exec-maven-plugin</artifactId>
+			 <version>1.6.0</version>
+			 <executions>
+				 <execution>
+						 <id>AssetMgrApp</id>
+						 <goals>
+							 <goal>java</goal>
+						 </goals>
+						 <configuration>
+								 <mainClass>ibm.cte.pot.assetmgr.AssetManagerApplication</mainClass>
+						 </configuration>
+				 </execution>
+				 
+		 	</executions>
+		</plugin>
         </plugins>
     </build>
 </project>
