forgto to commit this work on bff

--- a/asset-consumer/conf/config.properties
+++ b/asset-consumer/conf/config.properties
@@ -9,3 +9,4 @@ kafka.bootstrap.server=docker.for.mac.host.internal:30092
 kafka.asset.topic.name=asset-topic
 kafka.groupid=assetinjectors
 kafka.poll.duration=2000
+version=v0.0.2
