--- a/asset-consumer/conf/config.properties
+++ b/asset-consumer/conf/config.properties
@@ -1,12 +1,11 @@
 # cassandra.contactpoints=cassandra-0.cassandra-svc.greencompute.svc.cluster.local
-cassandra.contactpoints=localhost
+cassandra.contactpoints=cassandra.green.case
 cassandra.port=9042
 cassandra.keyspace=assetmonitoring
 cassandra.asset.table.name=assets
 cassandra.strategy=SimpleStrategy
 cassandra.replicas=1
-kafka.bootstrap.server=docker.for.mac.host.internal:30092
+kafka.bootstrap.server=kafka.green.case
 kafka.asset.topic.name=asset-topic
-kafka.groupid=assetinjectors
 kafka.poll.duration=2000
 version=v0.0.2
