--- a/deployments/kafka/kafka-deployment.yaml
+++ b/deployments/kafka/kafka-deployment.yaml
@@ -22,7 +22,7 @@ spec:
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: 192.168.1.89:30181
         - name: KAFKA_CREATE_TOPICS
-          value: "test-topic:1:1"
+          value: "asset-topic:1:1"
         image: wurstmeister/kafka
         imagePullPolicy: IfNotPresent
         name: kafka
