Packaging for consumer

--- a/asset-consumer/conf/config.properties
+++ b/asset-consumer/conf/config.properties
@@ -1,11 +1,12 @@
-# cassandra.contactpoints=cassandra-0.cassandra-svc.greencompute.svc.cluster.local
-cassandra.contactpoints=cassandra.green.case
+cassandra.contactpoints=cassandra-0.cassandra-svc.greencompute.svc.cluster.local
+# cassandra.contactpoints=cassandra.green.case
 cassandra.port=9042
 cassandra.keyspace=assetmonitoring
 cassandra.asset.table.name=assets
 cassandra.strategy=SimpleStrategy
 cassandra.replicas=1
-kafka.bootstrap.server=kafka.green.case
+kafka.bootstrap.server=greenkafka-ibm-es-kafka-sts-0.greenkafka-ibm-es-kafka-headless-svc.greencompute.svc.cluster.local:9092
 kafka.asset.topic.name=asset-topic
 kafka.poll.duration=2000
-version=v0.0.2
+kafka.groupid=injectors
+version=v0.0.4
