--- a/asset-event-producer/conf/config.properties
+++ b/asset-event-producer/conf/config.properties
@@ -1,2 +1,2 @@
-kafka.bootstrap.server=docker.for.mac.host.internal:30092
+kafka.bootstrap.server=kafka.green.case:9092
 kafka.asset.topic.name=asset-topic
