work on istio and consumer service definition

--- a/asset-consumer/deployments/aassetconsumer.yml
+++ b/asset-consumer/deployments/aassetconsumer.yml
@@ -14,6 +14,5 @@ spec:
     spec:
       containers:
       - image: ibmcase/asset-consumer:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: asset-consumer
-       
