--- a/asset-consumer/deployments/assetconsumer.yml
+++ b/asset-consumer/deployments/assetconsumer.yml
@@ -13,7 +13,7 @@ spec:
         app: asset-consumer
     spec:
       containers:
-      - image: ibmcase/asset-consumer:latest
+      - image: ibmcase/asset-consumer
         imagePullPolicy: IfNotPresent
         name: asset-consumer
         ports:
@@ -38,17 +38,17 @@ metadata:
     chart: asset-consumer
 data:
   config.properties: /
-    cassandra.contactpoints=cassandra.green.case
+    cassandra.contactpoints=cassandra-svc.greencompute.svc.cluster.local
     cassandra.port=9042
     cassandra.keyspace=assetmonitoring
     cassandra.asset.table.name=assets
     cassandra.strategy=SimpleStrategy
     cassandra.replicas=1
-    kafka.bootstrap.server=kafka.green.case:9092
+    kafka.bootstrap.server=greenkafka-ibm-es-kafka-headless-svc.greencompute.svc.cluster.local:9092
     kafka.asset.topic.name=asset-topic
     kafka.groupid=assetinjectors
     kafka.poll.duration=2000
-    version=v0.0.3
+    version=v0.0.5
 ---
 apiVersion: v1
 kind: Service
