--- a/asset-consumer/conf/config.properties
+++ b/asset-consumer/conf/config.properties
@@ -1,11 +1,12 @@
-cassandra.contactpoints=cassandra-svc.greencompute.svc.cluster.local
+# cassandra.contactpoints=cassandra-svc.greencompute
 # cassandra.contactpoints=cassandra.green.case
+cassandra.contactpoints=cassandra-svc
 cassandra.port=9042
 cassandra.keyspace=assetmonitoring
 cassandra.asset.table.name=assets
 cassandra.strategy=SimpleStrategy
 cassandra.replicas=1
-kafka.bootstrap.server=greenkafka-ibm-es-kafka-headless-svc.greencompute.svc.cluster.local:9092
+kafka.bootstrap.server=greenkafka-ibm-es-kafka-headless-svc:9092
 kafka.asset.topic.name=asset-topic
 kafka.poll.duration=2000
 kafka.groupid=injectors
