--- a/asset-consumer/deployments/assetconsumer.yml
+++ b/asset-consumer/deployments/assetconsumer.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - image: ibmcase/asset-consumer
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: asset-consumer
         ports:
         - containerPort: 8080
@@ -49,19 +49,3 @@ data:
     kafka.groupid=assetinjectors
     kafka.poll.duration=2000
     version=v0.0.5
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: asset-consumer-svc
-  labels:
-    chart: asset-consumer
-spec:
-  type: ClusterIP
-  ports:
-  - port: 8080
-    targetPort: 8080
-    protocol: TCP
-    name: asset-consumer-svc
-  selector:
-    app: asset-consumer
