Update the asset, kafka, zookeeper config

--- a/asset-consumer/conf/config.properties
+++ b/asset-consumer/conf/config.properties
@@ -6,7 +6,8 @@ cassandra.keyspace=assetmonitoring
 cassandra.asset.table.name=assets
 cassandra.strategy=SimpleStrategy
 cassandra.replicas=1
-kafka.bootstrap.server=greenkafka-ibm-es-kafka-headless-svc:9092
+# kafka.bootstrap.server=greenkafka-ibm-es-kafka-headless-svc:9092
+kafka.bootstrap.server=kafka-service:9092
 kafka.asset.topic.name=asset-topic
 kafka.poll.duration=2000
 kafka.groupid=injectors
