--- a/asset-event-producer/pom.xml
+++ b/asset-event-producer/pom.xml
@@ -8,6 +8,7 @@
         <kafka.version>1.1.0</kafka.version>
         <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
+        <logback.version>1.0.1</logback.version>
     </properties>
   <dependencies>
 
@@ -26,6 +27,16 @@
           <artifactId>slf4j-api</artifactId>
           <version>${slf4j.version}</version>
     </dependency>
+     <dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-classic</artifactId>
+  	    <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+       <groupId>ch.qos.logback</groupId>
+       <artifactId>logback-core</artifactId>
+       <version>${logback.version}</version>
+ </dependency>
     <dependency>
     	<groupId>com.google.code.gson</groupId>
     	<artifactId>gson</artifactId>
@@ -44,6 +55,22 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+			 <groupId>org.codehaus.mojo</groupId>
+			 <artifactId>exec-maven-plugin</artifactId>
+			 <version>1.6.0</version>
+			 <executions>
+				 <execution>
+						 <id>Simulator</id>
+						 <goals>
+							 <goal>java</goal>
+						 </goals>
+						 <configuration>
+								 <mainClass>ibm.cte.esp.PumpSimulator</mainClass>
+						 </configuration>
+				 </execution>
+			</executions>
+		</plugin>
     </plugins>
   </build>
 </project>
