--- a/deployments/kafka/kafka-deployment.yaml
+++ b/deployments/kafka/kafka-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
     app: kafka
   name: kafka
 spec:
-  replicas: 1
+  replicas: 3
   template:
     metadata:
       labels:
@@ -14,13 +14,13 @@ spec:
       containers:
       - env:
         - name: KAFKA_ADVERTISED_HOST_NAME
-          value: "192.168.1.89"
+          value: "kafka-service"
         - name: KAFKA_ADVERTISED_PORT
-          value: "30092"
+          value: "9092"
         - name: KAFKA_BROKER_ID
           value: "1"
         - name: KAFKA_ZOOKEEPER_CONNECT
-          value: 192.168.1.89:30181
+          value: zookeeper-service:2181
         - name: KAFKA_CREATE_TOPICS
           value: "asset-topic:1:1"
         image: wurstmeister/kafka
