--- a/deployments/kafka/kafka-service.yaml
+++ b/deployments/kafka/kafka-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: kafka-service
+    app: kafka
   name: kafka-service
 spec:
   type: ClusterIP
