Complete assetmgr deployment, and tune readme

--- a/asset-mgr-ms/src/main/resources/application.yml
+++ b/asset-mgr-ms/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8080
 cassandra:
- contactpoints: cassandra-0
+ contactpoints: cassandra-svc
  port: 9042
  keyspace: assetmonitoring
  basepackages:
