--- a/deployments/kafka/kafka-service.yaml
+++ b/deployments/kafka/kafka-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   labels:
     app: kafka
-  name: kafka-service
+  name: greencompute-kafka-svc
 spec:
   type: ClusterIP
   ports:
