Add remote call

--- a/asset-event-producer/conf/config.properties
+++ b/asset-event-producer/conf/config.properties
@@ -1,2 +1,6 @@
 kafka.bootstrap.server=kafka.green.case:9092
 kafka.asset.topic.name=asset-topic
+pump.event.pattern=preassure_play
+pump.metric.trent=increase
+pump.event.frequency=5
+pump.event.number=10
