--- a/asset-consumer/pom.xml
+++ b/asset-consumer/pom.xml
@@ -62,8 +62,13 @@
     <dependency>
    		<groupId>com.google.code.gson</groupId>
     	<artifactId>gson</artifactId>
-    	<version>2.8.2</version>
+    	<version>2.8.5</version>
 	</dependency>
+	  <dependency>
+          <groupId>io.kubeless</groupId>
+          <artifactId>params</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
 	<!--  The cassandra dependencies when you do not use Spring Data -->
 	<dependency>
 	  <groupId>com.datastax.cassandra</groupId>
