Work on event consumer and producer tests

--- a/asset-event-producer/conf/config.properties
+++ b/asset-event-producer/conf/config.properties
@@ -1,4 +1,4 @@
-kafka.bootstrap.server=kafka.green.case:9092
+kafka.bootstrap.server=gc-kafka-0.gc-kafka-hl-svc.greencompute.svc.cluster.local:32224
 kafka.asset.topic.name=asset-topic
 pump.event.pattern=preassure_play
 pump.metric.trent=increase
