--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ asset-event-producer/target/
 asset-consumer/target/
 asset-dashboard-bff/target/
 asset-dashboard-ui/node_module
+asset-itests/target/
