--- a/asset-consumer/pom.xml
+++ b/asset-consumer/pom.xml
@@ -3,7 +3,7 @@
   <groupId>asset-analytics</groupId>
   <artifactId>asset-consumer</artifactId>
   <version>0.0.1</version>
-  <description>A set of consumers for integrating with Kafka. One of them is a Springboot app 
+  <description>A set of consumers for integrating with Kafka. One of them is a Springboot app
   to consume new asset event and event measurement and ingest them to a Cassandra data base.
   Other are to test kafka deployment.
   </description>
@@ -60,15 +60,16 @@
            <version>${slf4j.version}</version>
     </dependency>
     <dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient</artifactId>
+    		<version>4.5.5</version>
+	</dependency>
+    <dependency>
    		<groupId>com.google.code.gson</groupId>
     	<artifactId>gson</artifactId>
     	<version>2.8.5</version>
 	</dependency>
-	  <dependency>
-          <groupId>io.kubeless</groupId>
-          <artifactId>params</artifactId>
-          <version>1.0-SNAPSHOT</version>
-      </dependency>
+
 	<!--  The cassandra dependencies when you do not use Spring Data -->
 	<dependency>
 	  <groupId>com.datastax.cassandra</groupId>
@@ -127,6 +128,15 @@
 						 </goals>
 						 <configuration>
 								 <mainClass>ibm.cte.esp.AssetInjector</mainClass>
+						 </configuration>
+				 </execution>
+				 <execution>
+						 <id>AssetPrint</id>
+						 <goals>
+							 <goal>java</goal>
+						 </goals>
+						 <configuration>
+								 <mainClass>ibm.cte.esp.AssetEventSimplestConsumer</mainClass>
 						 </configuration>
 				 </execution>
 		 	</executions>
