--- a/asset-dashboard-ui/angular.json
+++ b/asset-dashboard-ui/angular.json
@@ -26,9 +26,12 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/leaflet/leaflet.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/leaflet/leaflet.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -78,9 +81,10 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/leaflet/leaflet.css"
             ],
-            "scripts": [],
+            "scripts": ["src/assets/leaflet/leaflet.js"],
             "assets": [
               "src/favicon.ico",
               "src/assets"
