--- a/asset-dashboard-bff/pom.xml
+++ b/asset-dashboard-bff/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>spring-kafka</artifactId>
             <version>${spring-kafka.version}</version>
         </dependency>
+         <dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient</artifactId>
+    		<version>4.5.5</version>
+		</dependency>
 	     <dependency>
     	     <groupId>com.google.code.gson</groupId>
     	     <artifactId>gson</artifactId>
