--- a/asset-dashboard-bff/src/main/resources/application.yml
+++ b/asset-dashboard-bff/src/main/resources/application.yml
@@ -1,6 +1,10 @@
+server:
+  port: 8081 
+  servlet:
+    contextPath: /dashboardbff
 spring:
   kafka:
-    bootstrap-servers: docker.for.mac.host.internal:30092
+    bootstrap-servers: gc-kafka-0.gc-kafka-hl-svc.greencompute.svc.cluster.local:32224
 
 app:
   topic:
