--- a/asset-dashboard-ui/package.json
+++ b/asset-dashboard-ui/package.json
@@ -23,15 +23,17 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@stomp/stompjs": "^4.0.7",
+    "@types/leaflet": "^1.2.11",
+    "adm-zip": "^0.4.11",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
+    "cryptiles": "^4.1.2",
+    "leaflet": "^1.3.4",
+    "parsejson": "^0",
     "queueing-subject": "^0.3.0",
     "rxjs": "^6.0.0",
     "rxjs-websockets": "^6.0.1",
     "sockjs-client": "^1.1.5",
-    "parsejson": "^0",
-    "cryptiles": "^4.1.2",
-    "adm-zip": "^0.4.11",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
