Deploy on local k8s

--- a/asset-consumer/pom.xml
+++ b/asset-consumer/pom.xml
@@ -131,7 +131,7 @@
 						 </configuration>
 				 </execution>
 				 <execution>
-						 <id>AssetPrint</id>
+						 <id>AssetEventPrint</id>
 						 <goals>
 							 <goal>java</goal>
 						 </goals>
