--- a/asset-event-producer/conf/config.properties
+++ b/asset-event-producer/conf/config.properties
@@ -1,5 +1,6 @@
-kafka.bootstrap.server=gc-kafka-0.gc-kafka-hl-svc.greencompute.svc.cluster.local:32224
+kafka.bootstrap.servers=gc-kafka-0.gc-kafka-hl-svc.greencompute.svc.cluster.local:32224
 kafka.asset.topic.name=asset-topic
+kafka.text.topic.name=text-topic
 pump.event.pattern=preassure_play
 pump.metric.trent=increase
 pump.event.frequency=5
