--- a/asset-event-producer/pom.xml
+++ b/asset-event-producer/pom.xml
@@ -11,7 +11,12 @@
         <logback.version>1.0.1</logback.version>
     </properties>
   <dependencies>
-
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <scope>test</scope>
+	</dependency>
 	 <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-streams</artifactId>
@@ -55,10 +60,9 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-      <plugin>
+      <plugin>	
 			 <groupId>org.codehaus.mojo</groupId>
 			 <artifactId>exec-maven-plugin</artifactId>
-			 <version>1.6.0</version>
 			 <executions>
 				 <execution>
 						 <id>Simulator</id>
