--- a/deployments/cassandra/prod/cassandra-volumes.yaml
+++ b/deployments/cassandra/prod/cassandra-volumes.yaml
@@ -12,7 +12,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /tmp/data/cassandra-data-1
+    path: /var/lib/cassandra/data
   persistentVolumeReclaimPolicy: Recycle
 ---
 apiVersion: v1
@@ -28,7 +28,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /tmp/data/cassandra-data-2
+    path: /var/lib/cassandra/data
   persistentVolumeReclaimPolicy: Recycle
 ---
 apiVersion: v1
@@ -44,5 +44,5 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /tmp/data/cassandra-data-3
+    path: /var/lib/cassandra/data
   persistentVolumeReclaimPolicy: Recycle
