Deploy BFF on k8s

--- a/asset-consumer/conf/config.properties
+++ b/asset-consumer/conf/config.properties
@@ -1,7 +1,7 @@
 # cassandra.contactpoints=cassandra-svc.greencompute
 # cassandra.contactpoints=cassandra.green.case
-cassandra.contactpoints=cassandra-svc
-cassandra.port=9042
+cassandra.contactpoints=cassandra-0.cassandra.greencompute.svc.cluster.local
+cassandra.port=32207
 cassandra.keyspace=assetmonitoring
 cassandra.asset.table.name=assets
 cassandra.strategy=SimpleStrategy
