--- a/asset-dashboard-bff/pom.xml
+++ b/asset-dashboard-bff/pom.xml
@@ -51,6 +51,13 @@
             <artifactId>kafka-streams</artifactId>
             <version>${kafka.version}</version>
         </dependency>
+	     <dependency>
+	     	<groupId>org.springframework.boot</groupId>
+	     	<artifactId>
+	     		spring-boot-configuration-processor
+	     	</artifactId>
+	     	<optional>true</optional>
+	     </dependency>
   </dependencies>
 
 
@@ -67,6 +74,17 @@
         </configuration>
       </plugin>
       <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+            </executions>
+     </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
 		  <executions>
@@ -76,7 +94,7 @@
 		            <goal>java</goal>
 		        </goals>
 		        <configuration>
-		            <mainClass>ibm.cte.pot.BffApplication</mainClass>
+		            <mainClass>ibm.cte.esp.BffApplication</mainClass>
 		        </configuration>
 		    </execution>
 		  </executions>
