--- a/deployments/cassandra/dev/cassandra-statefulset.yml
+++ b/deployments/cassandra/dev/cassandra-statefulset.yml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: cassandra
 spec:
-  serviceName: cassandra-svc
+  serviceName: cassandra
   replicas: 1
   selector:
     matchLabels:
@@ -46,7 +46,7 @@ spec:
               - nodetool drain
         env:
           - name: CASSANDRA_SEEDS
-            value: cassandra-0.cassandra-svc.greencompute.svc.cluster.local
+            value: cassandra-0.cassandra.greencompute.svc.cluster.local
           - name: MAX_HEAP_SIZE
             value: 256M
           - name: HEAP_NEWSIZE
