work on consumer

--- a/asset-consumer/conf/config.properties
+++ b/asset-consumer/conf/config.properties
@@ -1,7 +1,7 @@
 # cassandra.contactpoints=cassandra-svc.greencompute
 # cassandra.contactpoints=cassandra.green.case
 cassandra.contactpoints=cassandra-0.cassandra.greencompute.svc.cluster.local
-cassandra.port=32207
+cassandra.port=32042
 cassandra.keyspace=assetmonitoring
 cassandra.asset.table.name=assets
 cassandra.strategy=SimpleStrategy
@@ -12,3 +12,6 @@ kafka.asset.topic.name=asset-topic
 kafka.poll.duration=2000
 kafka.groupid=injectors
 version=v0.0.4
+
+assetmanager.host=assetmgr.greencompute.ibmcase.com
+assetmanager.port=32544
