--- a/asset-consumer/deployments/assetconsumer.yml
+++ b/asset-consumer/deployments/assetconsumer.yml
@@ -13,6 +13,6 @@ spec:
         app: asset-consumer
     spec:
       containers:
-      - image: ibmcase/asset-consumer:latest
+      - image: ibmcase/gc-asset-consumer:latest
         imagePullPolicy: Always
         name: asset-consumer
