--- a/asset-consumer/pom.xml
+++ b/asset-consumer/pom.xml
@@ -86,7 +86,25 @@
 	  <artifactId>cassandra-driver-extras</artifactId>
 	  <version>3.5.1</version>
 	</dependency>
-	   <dependency>
+	<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-all</artifactId>
+    		<version>1.10.19</version>
+    		<scope>test</scope>
+	</dependency>
+	<dependency>
+   		<groupId>org.cassandraunit</groupId>
+   		<artifactId>cassandra-unit</artifactId>
+   		<version>3.5.0.1</version>
+   		<scope>test</scope>
+   		<exclusions>
+       	<exclusion>
+           	<groupId>com.datastax.cassandra</groupId>
+           	<artifactId>cassandra-driver-core</artifactId>
+       	</exclusion>
+   	</exclusions>
+	</dependency>
+   <dependency>
         <groupId>com.fasterxml.jackson.dataformat</groupId>
         <artifactId>jackson-dataformat-yaml</artifactId>
         <version>2.9.6</version>
