--- a/deployments/cassandra/dev/cassandra-service.yml
+++ b/deployments/cassandra/dev/cassandra-service.yml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   labels:
     app: cassandra
-  name: cassandra
+  name: cassandra-np
   annotations:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 spec:
