--- a/asset-consumer/pom.xml
+++ b/asset-consumer/pom.xml
@@ -7,42 +7,15 @@
   to consume new asset event and event measurement and ingest them to a Cassandra data base.
   Other are to test kafka deployment.
   </description>
-  <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
-  </parent>
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kafka.client.version>1.1.0</kafka.client.version>
-        <spring-kafka.version>2.1.7.RELEASE</spring-kafka.version>
+          <kafka.version>1.1.0</kafka.version>
         <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
     </properties>
   <dependencies>
-     <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-web</artifactId>
-     </dependency>
-     <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-test</artifactId>
-         <scope>test</scope>
-     </dependency>
-     <dependency>
-	   <groupId>org.springframework.kafka</groupId>
-	   <artifactId>spring-kafka</artifactId>
-	   </dependency>
-	 <dependency>
-      <groupId>org.springframework.kafka</groupId>
-      <artifactId>spring-kafka-test</artifactId>
-      <version>${spring-kafka.version}</version>
-      <scope>test</scope>
-    </dependency>
-     <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-cassandra</artifactId>
-	</dependency>
+     
 	 <dependency>
          <groupId>org.apache.kafka</groupId>
          <artifactId>kafka-streams</artifactId>
@@ -141,15 +114,7 @@
 			 <artifactId>exec-maven-plugin</artifactId>
 			 <version>1.6.0</version>
 			 <executions>
-				 <execution>
-						 <id>AssetApp</id>
-						 <goals>
-							 <goal>java</goal>
-						 </goals>
-						 <configuration>
-								 <mainClass>ibm.cte.esp.spring.KafkaInjectorApplication</mainClass>
-						 </configuration>
-				 </execution>
+				 
 				 <execution>
 						 <id>AssetInjector</id>
 						 <goals>
