--- a/asset-consumer-function/package.json
+++ b/asset-consumer-function/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "Example function for serverless kubeless",
   "dependencies": {
+    "dotenv": "^6.1.0",
+    "lodash": "^4.17.11",
+    "mocha": "^5.2.0",
+    "request": "^2.88.0",
     "serverless-kubeless": "^0.4.0",
-    "lodash": "^4.1.0"
+    "sinon": "^7.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "serverless",
