Add spring code in separate folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 asset-event-producer/target/
 asset-consumer/target/
+asset-consumer/.settings/
 asset-dashboard-bff/target/
-asset-dashboard-ui/node_module
+asset-dashboard-ui/node_module/
+asset-itests/.settings/
 asset-itests/target/
+asset-consumer-spring/target/
+asset-consumer-spring/.settings/
+
