Correct event data

--- a/asset-consumer-function/.env
+++ b/asset-consumer-function/.env
@@ -1,4 +1,4 @@
-ASSET_URL=http://localhost:9080/assetmanager/assets
+ASSET_URL=http://assetmanager-service:9080/assetmanager/assets
 
 host=http://localhost:9080
 Path=/assetmanager/assets
