Parametrizing the url

--- a/asset-consumer-function/serverless.yml
+++ b/asset-consumer-function/serverless.yml
@@ -26,3 +26,5 @@ functions:
   consumeasset:
     handler: handler.consumeAssetEvent
     namespace: greencompute
+    environment:
+      ASSET_URL: http://assetmanager-service:9080/assetmanager/assets
