Work on websocket again

--- a/asset-dashboard-ui/proxy.config.json
+++ b/asset-dashboard-ui/proxy.config.json
@@ -1,6 +1,6 @@
 {
 	"/assets": {
-		"target": "http://assetmgr.greencompute.ibmcase.com/assetmanager/assets",
+		"target": "http://assetmgr.greencompute.ibmcase.com:32544/assetmanager/assets",
 		"secure": false
 	},
 	"changeOrigin": true,
