--- a/asset-consumer/conf/config.properties
+++ b/asset-consumer/conf/config.properties
@@ -3,15 +3,15 @@
 cassandra.contactpoints=cassandra-0.cassandra.greencompute.svc.cluster.local
 cassandra.port=32042
 cassandra.keyspace=assetmonitoring
-cassandra.asset.table.name=assets
+cassandra.asset.table.name=event_metrics
 cassandra.strategy=SimpleStrategy
 cassandra.replicas=1
 
 kafka.bootstrap.servers=gc-kafka-0.gc-kafka-hl-svc.greencompute.svc.cluster.local:32224
-kafka.asset.topic.name=asset-topic
+kafka.asset.topic.name=asset-metrics-topic
 kafka.poll.duration=2000
 kafka.groupid=injectors
-version=v0.0.4
+version=v0.0.1
 
 assetmanager.host=assetmgr.greencompute.ibmcase.com
 assetmanager.port=32544
