--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ asset-consumer-spring/.settings/
 asset-consumer-function/bin/
 asset-consumer-function/node_modules/
 asset-consumer-function/.serverless/
-
+/.vscode
