--- a/asset-dashboard-ui/package.json
+++ b/asset-dashboard-ui/package.json
@@ -55,6 +55,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~8.2.0",
     "tslint": "~5.17.0",
-    "typescript": "3.5.0-rc"
+    "typescript": "3.5.1"
   }
 }
